Added methods to handle game function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="textactivegameswinnerwindow">Aktiva matcher</string>
     <string name="labelGamePlayer1">Spelare 1</string>
     <string name="labelGamePlayer2">Spelare 2</string>
+    <string name="resultText">x - x</string>
 </resources>
